--- a/common/svd2forth-v2/ancient/Makefile
+++ b/common/svd2forth-v2/ancient/Makefile
@@ -1,10 +1,12 @@
-# svd2forth-v2 makefile for Mecrisp-Stellaris by Matthias Koch
-# By Terry Porter terry@tjporter.com.au
+# Makefile for mecrisp-stellaris svd2forthv2 Quickstart Readme T.Porter 2016
+# Requires xsltproc sed vim (or your choice of editor)
+  
+
 
 PROJ    		= ./
 FOLDED_SVD  		= STM32F0xx.svd
+EDITOR			= gvim
 PROCESSOR 		= xsltproc
-EDITOR			= gvim -geometry 90x60+150+150
 UNFOLDED_SVD 		= $(FOLDED_SVD).uf.svd
 FOLDED_SRC     		= $(PROJ)$(FOLDED_SVD)
 UNFOLDED_SRC    	= $(PROJ)$(UNFOLDED_SVD)
@@ -14,13 +16,13 @@ SVDCUTTER_STYLESHEET	= $(PROJ)svdcutter.xsl  # template.xml is hardcoded here
 REGISTERS_STYLESHEET	= $(PROJ)registers.xsl  # template.xml is hardcoded here
 TEMPLATE 		= $(PROJ)template.xml
 REGISTERS		= $(PROJ)registers.text
-MEMMAP			= $(PROJ)m
+MEMMAP			= $(PROJ)m		# full name is memmap.txt but we use "m" to save typing
 TEMP			= $(PROJ)1.tmp
 TEMP2			= $(PROJ)2.tmp
 TEMP3			= $(PROJ)3.tmp
 TEMP4			= $(PROJ)4.tmp
 
-all:  $(MEMMAP)  $(REGISTERS)
+all:   memmap
 
 
 $(UNFOLDED_SVD): $(FOLDED_SVD)
@@ -35,13 +37,13 @@ $(TEMPLATE): $(UNFOLDED_SVD)
 	@echo "$(UNFOLDED_SVD) template created --> $(TEMPLATE)"
 	@echo
 
-$(REGISTERS): $(TEMPLATE) $(UNFOLDED_SVD) $(REGISTERS_STYLESHEET)
+$(REGISTERS): $(TEMPLATE) 
 	$(PROCESSOR) -o  $(TEMP3) $(REGISTERS_STYLESHEET) $(UNFOLDED_SVD)
 	cat $(TEMP3) | sed -e  's/^0x/$$/gi' > $(TEMP4)
 	cat $(TEMP4)| sed -e  's/ 0x/ $$/gi' > $(REGISTERS)
 	rm $(TEMP3) $(TEMP4)
 
-$(MEMMAP): $(TEMPLATE) $(UNFOLDED_SVD) $(SVDCUTTER_STYLESHEET)
+memmap:	$(TEMPLATE) $(UNFOLDED_SVD) $(REGISTERS)
 	$(PROCESSOR) -o $(TEMP) $(SVDCUTTER_STYLESHEET) $(UNFOLDED_SVD)
 	cat $(TEMP) | sed -e  's/^0x/$$/gi' > $(TEMP2)
 	cat $(TEMP2)| sed -e  's/ 0x/ $$/gi' > $(MEMMAP)
@@ -51,8 +53,7 @@ edit:	$(TEMPLATE)
 	$(EDITOR) $(TEMPLATE)
 
 clean:	
-	rm $(MEMMAP) $(REGISTERS) $(TEMPLATE) $(UNFOLDED_SVD) .*.swp
-
+	rm $(UNFOLDED_SVD) $(TEMPLATE) $(REGISTERS) $(MEMMAP) .*.swp
 
 
  
